@@ -1,4 +1,6 @@
 2009-04-12 Damien Douxchamps http://damien.douxchamps.net/
+	* SVN 589: Apply patch 2 from Mike Lundy: properly initialize
+	           Basler-specific structs.
         * SVN 588: Apply patch 1 from Mike Lundy: disable option for not
 	           building example programs.
 	
